--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -1,10 +1,12 @@
 
-.container{  }
-.searchengine{  }
-.searchengine-input{  }
-.searchengine-button{  }
+*{ box-sizing: border-box; }
+.container{ position: relative; width: 100%;  display:flex;  justify-content:center; }
+.box{ width: 1024px;  }
+.searchengine{ width: 100%; margin-bottom:20px; margin-top: 20px; display: grid; grid-template-columns: auto 130px; grid-gap: 10px; }
+.searchengine-input{ width:100%; background-color:  #ddd;   padding: 15px; border-radius: 30px; border: none; outline: none; }
+.searchengine-button{ background-color:  #0099ff; color: #fff; width:100%; padding: 15px; cursor: pointer; border-radius: 30px; border: none; outline: none; }
 .phonelist{  }
-.phonelist-item{  }
+.phonelist-item{ width: 1024px; padding: 15px 10px; border-bottom: 1px solid rgba(0, 0, 0, .15); display: grid; grid-template-columns: auto 200px 80px;  }
 .phonelist-item-name{  }
 .phonelist-item-number{  }
 .phonelist-item-button{  }
