Adding more functionalities
This time we added two more buttons: one to create a contact and another to edit a contact, in addition to the remove button. We also made a few small adjustments to further improve the aesthetics of the user panel.

--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -2,14 +2,17 @@
 *{ box-sizing: border-box; }
 body{ background-color: #666699; }
 .container{  position: relative; width: 100%;  display:flex;  justify-content:center; }
-.box{ margin-top: 20px; width: 1024px; background-color: #efeff5; padding: 20px 40px; padding-bottom: 50px; box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; border-radius: 10px; }
+.box{ margin-top: 20px; margin-bottom: 20px; width: 1024px; background-color: #efeff5; padding: 20px 40px; padding-bottom: 50px; box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; border-radius: 10px; }
 .supertitle{ padding: 0px; margin-bottom: 20px; font-size: 40px; color: #666699; }
-.searchengine{ width: 100%; margin-bottom:20px; margin-top: 20px; display: grid; grid-template-columns: auto 130px; grid-gap: 10px;  }
-.searchengine-input{ width:100%; background-color:  #efeff5; border: 1px solid #a1a1c4; font-size: 16px; padding: 15px; border-radius: 30px; outline: none; }
-.searchengine-button{ background-color:  #0099ff; color: #fff; font-size: 16px; width:100%; padding: 15px; cursor: pointer; border-radius: 30px; border: none; outline: none; }
+.searchengine{ width: 100%; margin-bottom:20px; margin-top: 20px; display: grid; grid-template-columns: auto 130px 130px; grid-gap: 10px;  }
+.searchengine-input{ width:100%; background-color:  #efeff5; border: 1px solid #a1a1c4; font-size: 16px; padding: 12px; border-radius: 30px; outline: none; box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 8px; }
+.searchengine-button-search{ background-color:  #0099ff; color: #fff; font-size: 16px; width:100%; padding: 15px; cursor: pointer; border-radius: 30px; border: none; outline: none; box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 6px; }
+.searchengine-button-new{ background-color:  #33cc33; color: #fff; font-size: 16px; width:100%; padding: 15px; cursor: pointer; border-radius: 30px; border: none; outline: none; box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 6px; }
 .phonelist{  }
-.phonelist-item{ box-sizing: border-box; padding: 15px 10px;  display: grid; grid-template-columns: auto 200px 80px;  }
+.phonelist-item{ box-sizing: border-box; padding: 15px 10px;  display: grid; grid-template-columns: auto 164px 80px 80px; grid-gap: 10px;  }
 .phonelist-item:nth-child(odd) {  } .phonelist-item:nth-child(even) { background-color: rgba(0, 0, 0, .05); border-radius: 3px; }
 .phonelist-item-name{  }
 .phonelist-item-number{  }
-.phonelist-item-button{  }
+.phonelist-item-button-edit{ background-color:  #ffdb4d; box-sizing: border-box; text-align: center; color: #333; font-size: 14px; width:100%; padding: 5px; cursor: pointer; border-radius: 30px; border: none; outline: none; }
+.phonelist-item-button-remove{ background-color:  #ff6666; box-sizing: border-box; text-align: center; color: #333; font-size: 14px; width:100%; padding: 5px; cursor: pointer; border-radius: 30px; border: none; outline: none; }
+.phonelist-item-center{ height: 100%; display: flex; align-items:center; }
