--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -9,10 +9,22 @@ body{ background-color: #666699; }
 .searchengine-button-search{ background-color:  #0099ff; color: #fff; font-size: 16px; width:100%; padding: 15px; cursor: pointer; border-radius: 30px; border: none; outline: none; box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 6px; }
 .searchengine-button-new{ background-color:  #33cc33; color: #fff; font-size: 16px; width:100%; padding: 15px; cursor: pointer; border-radius: 30px; border: none; outline: none; box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 6px; }
 .phonelist{  }
-.phonelist-item{ box-sizing: border-box; padding: 15px 10px;  display: grid; grid-template-columns: auto 164px 80px 80px; grid-gap: 10px;  }
+.phonelist-item{ box-sizing: border-box; padding: 15px 10px;  display: grid; grid-template-columns: auto 200px 80px 80px; grid-gap: 10px;  }
 .phonelist-item:nth-child(odd) {  } .phonelist-item:nth-child(even) { background-color: rgba(0, 0, 0, .05); border-radius: 3px; }
 .phonelist-item-name{  }
 .phonelist-item-number{  }
-.phonelist-item-button-edit{ background-color:  #ffdb4d; box-sizing: border-box; text-align: center; color: #333; font-size: 14px; width:100%; padding: 5px; cursor: pointer; border-radius: 30px; border: none; outline: none; }
-.phonelist-item-button-remove{ background-color:  #ff6666; box-sizing: border-box; text-align: center; color: #333; font-size: 14px; width:100%; padding: 5px; cursor: pointer; border-radius: 30px; border: none; outline: none; }
+.phonelist-item-button-edit{ background-color:  #ffdb4d; box-sizing: border-box; text-align: center; color: #333; font-size: 14px; width:100%; padding: 5px; cursor: pointer; border-radius: 30px; border: none; outline: none; box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 5px; }
+.phonelist-item-button-remove{ background-color:  #ff6666; box-sizing: border-box; text-align: center; color: #333; font-size: 14px; width:100%; padding: 5px; cursor: pointer; border-radius: 30px; border: none; outline: none; box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 5px; }
 .phonelist-item-center{ height: 100%; display: flex; align-items:center; }
+.phonelist-button { opacity: 0.9; -moz-opacity: 0.9; filter: alpha(opacity=90); }
+.phonelist-button:hover{ opacity: 1; -moz-opacity: 1; filter: alpha(opacity=100); }
+
+.background{ display:none; }
+.popupnew{ display:none; }
+.popupnew-box{  }
+.popupnew-group{  }
+.popupnew-label{  }
+.popupnew-input{  }
+.popupnew-button{  }
+.popupnew-button-cancel{  }
+.popupnew-button-save{  }
